2006-02-27  Daniel Henninger  <jadestorm@nc.rr.com>

	* tools/Makefile:
	Added script to create test install.

	* src/tlib/oscar.py:
	Fixed stupid error.

2006-02-26  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/avatar.py:
	Fixed odd call to abspath.

	* src/tlib/oscar.py:
	Added other SSI and user info types.

2006-02-24  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	Fixed double encoding issue with auto-away messages.

2006-02-22  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	* src/legacy/icqt.py:
	Updated capabilities stuff and tried out a few.

2006-02-14  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/sasl.py:
	Tweaks to try to get sasl working right.

2006-02-13  Daniel Henninger  <jadestorm@nc.rr.com>

	* tools/migrate.py:
	Fixed to use new twistwrap stuff.

	* src/sasl.py:
	Fixed duplicate xmlns declaration.

	* src/tlib/oscar.py:
	Fixed encoding that doesn't exist everywhere.

	* PyICQt.py:
	Adjusted call to python.

	* config_example.xml:
	Switched to port 5190 since 5238 seems to bust buddy icons.

	* src/web/handler.py:
	Updated to ask real jabber server if you are who you say you are.

	* src/sasl.py:
	Minor mods to fix duplicate xmlns declaration.

2006-02-12  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	Fixed typoed repr.

	* src/debug.py:
	Adjusted ordering of debug output.

	* src/web/handler.py:
	Fixed string concat bug.

2006-02-11  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Applied fixes for dealing with reactors better.

	* src/avatar.py:
	* src/contact.py:
	* src/disco.py:
	* src/jabw.py:
	* src/main.py:
	* src/misciq.py:
	* src/register.py:
	* src/sasl.py:
	* src/session.py:
	* src/utils.py:
	* src/xmlconfig.py:
	Applied Florian's patch to use %r instead of %s.
	Fixes crashes during printing of unprintable chars.

	* src/session.py:
	Fixed handling of avatar hashes received.

	* tools/Makefile:
	Added developer Makefile.

	* src/config.py:
	* src/debug.py: